refactoring text alignment issues

--- a/src/pages/Contact/contact.css
+++ b/src/pages/Contact/contact.css
@@ -32,26 +32,26 @@
 
 .emhead {
     margin-top: 20px;
-    margin-left: 125px;
+    margin-left: 195px;
     color: black;
 }
 
 .ctchead {
     margin-top: 20px;
-    margin-left: 119px;
+    margin-left:150px;
     color: black;
     text-decoration: none;
 }
 
 .gthead {
     margin-top: 20px;
-    margin-left: 135px;   
+    margin-left: 185px;   
     color: black;
     text-decoration: none;
 }
 
 .em {
-    padding-left: 100px;
+    padding-left: 155px;
     color: black;
     font-size: 15px;
 }
@@ -64,7 +64,7 @@
 }
 
 .gt {
-    padding-left: 100px;
+    padding-left: 130px;
     text-decoration: none;
     color: black;
     font-size: 15px;
